# Plummy

./: Dockerfile  README.md
PlummyScrapper/: .env  .env.backup  .env.bak  .gitignore  api_broken_products_20251019_010250.json  category_filter.py  database.py  env_example.txt  execution_controller.py  links.txt  main.py  plummy.py  plummy_categories.json  poizon_scraper.py  price_calculator.py  price_formulas.json  product_processor.py  progress_tracker.py  pyproject.toml  rate_limiter.py  timer_decorator.py  wordpress_sync.py  ╨Ш╨Э╨б╨в╨а╨г╨Ъ╨ж╨Ш╨п_╨Ч╨Р╨Я╨г╨б╨Ъ.md  ╨Ш╨б╨Я╨а╨Р╨Т╨Ы╨Х╨Э╨Ш╨Х_SKU_ID.md  ╨Ъ╨а╨Ш╨в╨Ш╨з╨Х╨б╨Ъ╨Р╨п_╨Ю╨и╨Ш╨С╨Ъ╨Р_SESSION.md  ╨Ъ╨а╨Ш╨в╨Ш╨з╨Х╨б╨Ъ╨Р╨п_╨Ю╨и╨Ш╨С╨Ъ╨Р_╨Ъ╨Р╨в╨Х╨У╨Ю╨а╨Ш╨Ш╠Ж.md  ╨Ъ╨а╨Ш╨в╨Ш╨з╨Х╨б╨Ъ╨Р╨п_╨Ю╨и╨Ш╨С╨Ъ╨Р_╨д╨Х╨Э╨Ш.md  ╨г╨Я╨а╨Р╨Т╨Ы╨Х╨Э╨Ш╨Х_╨Т╨л╨Я╨Ю╨Ы╨Э╨Х╨Э╨Ш╨Х╨Ь.md  ╨д╨Ш╨Э╨Р╨Ы╨м╨Э╨Р╨п_╨Я╨а╨Ю╨Т╨Х╨а╨Ъ╨Р_╨Ъ╨Ю╨Ь╨Р╨Э╨Ф.md
_MACOSX/: ._PlummyScraper
_MACOSX/PlummyScraper/: ._price_formulas.json
